--- a/MROCourse/app/src/main/res/values/strings.xml
+++ b/MROCourse/app/src/main/res/values/strings.xml
@@ -8,9 +8,34 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_gystogram">GystogramActivity</string>
     <!--<string name="main_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
-    --><string name="main_text">When I wake up, the other side of the bed is cold. My fingers stretch out, seeking Prim\'s warmth but finding only the rough canvas cover of the mattress. She must have had bad dreams and climbed in with our mother. Of course, she did. This is the day of the reaping.
+    --><!--<string name="main_text">When I wake up, the other side of the bed is cold. My fingers stretch out, seeking Prim\'s warmth but finding only the rough canvas cover of the mattress. She must have had bad dreams and climbed in with our mother. Of course, she did. This is the day of the reaping.
 
 I prop myself up on one elbow. There\'s enough light in the bedroom to see them. My little sister, Prim, curled up on her side, cocooned in my mother\'s body, their cheeks pressed together. In sleep, my mother looks younger, still worn but not so beaten-down. Prim\'s face is as fresh as a raindrop, as lovely as the primrose for which she was named. My mother was very beautiful once, too. Or so they tell me.
 
-Sitting at Prim\'s knees, guarding her, is the world\'s ugliest cat. Mashed-in nose, half of one ear missing, eyes the color of rotting squash. Prim named him Buttercup, insisting that his muddy yellow coat matched the bright flower. He hates me. Or at least distrusts me. Even though it was years ago, I think he still remembers how I think he still remembers how think he still remembers how think he still remembers how think he still remembers how </string>
+Sitting at Prim\'s knees, guarding her, is the world\'s ugliest cat. Mashed-in nose, half of one ear missing, eyes the color of rotting squash. Prim named him Buttercup, insisting that his muddy yellow coat matched the bright flower. He hates me. Or at least distrusts me. Even though it was years ago, I think he still remembers how I think he still remembers how think he still remembers how think he still remembers how think he still remembers how </string>-->
+<string name="main_text">
+    Адве́нт (от лат. adventus — приход) — название предрождественского периода, принятое в среде христианКатолической церкви и некоторыхпротестантских деноминаций (например, у лютеран) аналогичное периоду Рождественского поста на Востоке. Адвент — время ожидания, предшествующее праздникуРождества Христова, во время которого христиане готовятся к празднику.
+
+Описание, терминология, традиции
+
+Рождественский календарь
+
+Термином «адвент» в Вульгатеобозначается то, что в русском переводе звучит как «пришествие», а в греческом оригинале как греч.παρουσίας (Мф. 24:3).
+
+Первый день Адвента в римском обряде определяется как 4-е воскресенье до Рождества (в зависимости от года это воскресенье выпадает в период с 27 ноября по 3 декабря). В амвросианском обрядеАдвент продолжается 6 недель, и его первым воскресеньем является первое воскресенье после дняМартина Турского (11 ноября). С первого дня Адвента в Католической церкви начинается литургический год.
+
+Первые свидетельства об особом предрождественском времени относятся к 380 году, когда Сарагосский собор установил особые правила посещения богослужений с 17 декабря до праздника Богоявления[1]
+
+Духовный смысл Адвента двояк. Во-первых, это период подготовки к празднованию Рождества, «время радостного ожидания»; во-вторых, Церковь в этот период особым образом побуждает верующих размышлять на тему грядущего второго пришествия Христа.
+
+Каждое из четырёх воскресений Адвента имеет определённую тематику, отражающуюся в евангельских воскресных чтениях: первое посвящено пришествию Христа в конце времён; второе и третье (Gaudete)[2] отражают переход от Ветхого к Новому Завету, в том числе вспоминается служениеИоанна Крестителя; четвёртое посвящено евангельским событиям, непосредственно предшествовавшим Рождеству.
+
+В настоящее время Адвент в Католической церкви не рассматривается как постный период, хотя многие постные и покаянные практики продолжают существовать, например, воздержание от мясной пищи в рождественский сочельник во многих поместных церквах, ношение духовенством облаченийфиолетового, покаянного, цвета и др. В период Адвента верным рекомендуется приступить кисповеди и причастию, также в период Адвента Церковь особо призывает христиан к совершению дел милосердия[1].
+
+
+Венок Адвента в церкви
+
+Одной из наиболее известных традиций, касающихся Адвента, является «венок Адвента» — венок из еловых веток, в который вплетены четыре свечи. В первое воскресенье зажигается одна свеча, во второе — две и так далее, то есть становится с каждой неделей всё светлей. Такими венками украшаются как церкви, так и дома верующих. Ещё одна известная традиция —рождественский календарь для детей, разделённый на квадраты по числу дней Адвента, где за каждым листком с датой спрятано лакомство. В Германии также принято выставлять на подоконнике «световую дугу» (нем. Lichtbogen), сформированную электрическими лампочками.
+
+</string>
 </resources>
